# MetalCFU

./: Ammo.cpp  Ammo.h  Attachment.h  Barrier.cpp  Barrier.h  Behaviour.cpp  Behaviour.h  Box.cpp  Box.h  CMakeLists.txt  Collision.cpp  Collision.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  Granade.cpp  Granade.h  Interactable.cpp  Interactable.h  Inventory.cpp  Inventory.h  Map.cpp  Map.h  MedKit.cpp  MedKit.h  Player.cpp  Player.h  README.md  SpecialAttack.h  Terrain.cpp  Terrain.h  Trampoline.cpp  Trampoline.h  Usable.cpp  Usable.h  Weapon.cpp  Weapon.h  (+1 more)
Achievement/: AchievObserver.cpp  AchievObserver.h  Achievement.cpp  Achievement.h  BoomObserver.cpp  BoomObserver.h  DistanceAchieve.cpp  DistanceAchieve.h  DistanceObserver.cpp  DistanceObserver.h  KillObserver.cpp  KillObserver.h  Observer.h  Subject.h
Attachment/: Attachment.h  ExtendedMagazine.cpp  ExtendedMagazine.h  LaserScope.cpp  LaserScope.h  LongBarrel.cpp  LongBarrel.h  PowerBarrel.cpp  PowerBarrel.h
Behaviour/: Behaviour.cpp  Behaviour.h  attackBehaviour.cpp  attackBehaviour.h  patrolBehaviour.cpp  patrolBehaviour.h  suicidalBehaviour.cpp  suicidalBehaviour.h
Factory/: EnemyFactory.cpp  EnemyFactory.h  TerrainFactory.cpp  TerrainFactory.h  WeaponFactory.cpp  WeaponFactory.h
GUI/: Button.cpp  Button.h  GameOverMenu.cpp  GameOverMenu.h  MainMenu.cpp  MainMenu.h  OptionMenu.cpp  OptionMenu.h  PauseMenu.cpp  PauseMenu.h
GameState/: ExitGameState.cpp  ExitGameState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  IllegalStateException.cpp  IllegalStateException.h  MainMenuState.cpp  MainMenuState.h  OptionMenuState.cpp  OptionMenuState.h  PauseGameState.cpp  PauseGameState.h  StartGameState.cpp  StartGameState.h
HUD/: Hud.cpp  Hud.h
Sources/Maps/: mappa.txt  mappa1.txt  mappa2.txt
SpecialAttack/: BossAttack.cpp  BossAttack.h  Charge.cpp  Charge.h  Kamikaze.cpp  Kamikaze.h  SpecialAttack.cpp  SpecialAttack.h
test/: AmmoTest.cpp  AttachmentTest.cpp  CMakeLists.txt  CollisionTest.cpp  GameCharacterTests.cpp  GranadeTest.cpp  InventoryTest.cpp  MedKitTests.cpp  WeaponTest.cpp  runAllTests.cpp
utility/: BitmapFile.cpp  BitmapFile.h  CharacterAnimation.cpp  CharacterAnimation.h
